fix: improve description text contrast in light and dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -69,7 +69,7 @@
 	}
 
 	li strong small {
-		@apply block text-sm font-normal text-neutral-500;
+		@apply block text-sm font-normal text-neutral-400 dark:text-neutral-500;
 	}
 
 	li svg,
